@@ -5,6 +5,7 @@
 v0.8.1 (??.10.2010)
  * New hook in merge profiles
  * #46: Remove profiles from team
+ * #47: It is possible to calculate end result from results of match parts.
 
 v0.8.0 (21.10.2010)
  * BE module refactoring
